CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_BUILD_TYPE "Debug")

SET(PROJECT template)

SET(HEADERS
)

SET(SOURCES
    main.cpp
)

SET(BOOST_COMPONENTS
)

SET(GOOGLE_LIBRARIES
    gtest
)

PROJECT($PROJECT)

FIND_PACKAGE(Boost COMPONENTS ${BOOST_COMPONENTS} REQUIRED)

INCLUDE_DIRECTORIES(.)

SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

ADD_EXECUTABLE(${PROJECT}
    ${HEADERS}
    ${SOURCES}
)

TARGET_LINK_LIBRARIES(${PROJECT}
    ${CMAKE_THREAD_LIBS_INIT}
    ${Boost_LIBRARIES}
    ${GOOGLE_LIBRARIES}
)

SET_TARGET_PROPERTIES(${PROJECT} PROPERTIES ENABLE_EXPORTS true)
ADD_DEFINITIONS(-std=c++11)

